Added JS pages for Pages 2 and 3, fixed navigation functionality

--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main2.js"></script>
     <title>Travel Log Entry</title>
   </head>
 
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <button id="saveEntryBtn" class="save-entry-btn" style="display: none">
+      <button id="saveEntryBtn" class="save-entry-btn">
         Save Entry
       </button>
     </div>
