--- a/page3.html
+++ b/page3.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main3.js"></script>
     <title>Travel log details</title>
   </head>
 
   <body>
     <div class="Log">
-      <button id="editLogBtn" class="edit-page-btn">Edit Log</button>
+      <button class="edit-page-btn">Edit Log</button>
 
       <div class="banner-container">
         <div class="banner-content">
