Further fixing localStorage, parsing object(s)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <div class="title">
                 <h1>Logs</h1>
             </div>
-            <div class="log-wrapper">
-                <log-display title="Bali" date="Nov 2009"></log-display>
-
+            <div class="log-wrapper" id="log-wrapper">
                 <!-- These logs are representative of the logs that will be added once we do the JS
                  and are NOT functional; the logs will have to be populated by the JS -->
             </div>
