--- a/page3.html
+++ b/page3.html
@@ -16,11 +16,9 @@
 
   <body>
     <div class="Log">
-      <button id="editLogBtn" class="edit-page-btn">Edit Log</button>
-      <!-- <button id="backBtnPage3" class="back-btn" onclick="history.back()">
-        Back
-      </button> -->
       <button id="backBtnPage3" class="back-btn">Back</button>
+      <button id="editLogBtn" class="edit-page-btn">Edit Log</button>
+      <button id="deleteLogBtn" class="delete-page-btn">Delete Log</button>
 
       <div class="banner-container">
         <div class="banner-content">
@@ -50,18 +48,12 @@
         <h2>Itinerary</h2>
         <div id="itineraryDisplay" class="itinerary-textarea"></div>
       </div>
-    </div>
-
-    <div class="itinerary">
-      <h2>Itinerary</h2>
-      <div id="itineraryDisplay" class="itinerary-textarea"></div>
-    </div>
-
-    <!-- Map section on view page -->
-    <div class="map-integration">
-      <h2>Map</h2>
-      <div id="mapView" class="placeholder-box">
-        Map will appear here if we get it to work..
+      <!-- Map section on view page -->
+      <div class="map-integration">
+        <h2>Map</h2>
+        <div id="mapView" class="placeholder-box">
+          Map will appear here if we get it to work..
+        </div>
       </div>
     </div>
   </body>
