Map added to page 3 + added edit log btn

--- a/page3.html
+++ b/page3.html
@@ -21,6 +21,7 @@
     <div class="Log">
         <div class="banner-container">
           <span class="back-button" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i></span>
+          <button id="editLogBtn" class="edit-log">Edit Log</button>
           <div class="banner-content">
             <input
               type="text"
