--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,8 @@
   <body>
     <div class="Log">
         <div class="banner-container">
-          <span class="back-button" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i></span>
+          <span id="backBtnPage3" class="back-button" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i></span>
+          <button id="deleteLogBtn" class="delete-log">Delete Log</button>
           <button id="editLogBtn" class="edit-log">Edit Log</button>
           <div class="banner-content">
             <input
