Delete button + CSS

--- a/page3.html
+++ b/page3.html
@@ -20,9 +20,10 @@
   <body>
     <div class="Log">
         <div class="banner-display">
-          <span class="back-button" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i></span>
+          <button id="deleteLogBtn" class="delete-log"><i class="fa-solid fa-trash-can"></i></button>
           <button id="editLogBtn" class="edit-log"><i class="fa-solid fa-pen-to-square"></i></button>
           <div class="trip-banner">
+            <span class="back-button" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i></span>
             <div class="title-display">
               <i class="fa-solid fa-location-dot"></i>
               <p></p>
