page 3 js + css, now displays localStorage data

--- a/page2.html
+++ b/page2.html
@@ -76,7 +76,7 @@
           <h2>Notes</h2>
           <textarea
             id="notes"
-            class="notes-textarea"
+            class="data-input"
             placeholder="Write your notes..."
           ></textarea>
         </div>
@@ -96,10 +96,10 @@
           <h2>Itinerary</h2>
           <textarea
             id="itinerary"
-            class="itinerary-input"
+            class="data-input"
             placeholder="Type your itinerary..."
           ></textarea>
-
+<!-- 
         <div class="checklist">
           <h2>Checklist</h2>
           <input
@@ -110,7 +110,7 @@
           />
           <button id="addCheckItemBtn">+ Add Item</button>
           <div id="checklistItems"></div>
-        </div>
+        </div> -->
       </div>
 
           <div class="map-integration">
