--- a/page3.html
+++ b/page3.html
@@ -28,10 +28,16 @@
               <i class="fa-solid fa-location-dot"></i>
               <p></p>
             </div>
-            <div class="banner-display">
-              <p>Place</p>
-              <p>Place</p>
-              <p>Place</p>
+            <div class="information-display">
+              <div class="information-section">
+                <i class="fa-solid fa-location-dot fa-lg icon"></i>
+                <p class="location-display">Place</p>
+              </div>
+
+              <div class="information-section">
+                <i class="fa-solid fa-calendar fa-lg icon"></i>
+                <p class="date-display">Place</p>
+              </div>
             </div>
         </div>
       </div>
@@ -39,11 +45,9 @@
       <div class="fields section">
          <div class="note-wrapper box">
           <h2>Notes</h2>
-          <textarea
-            id="notes"
-            class="notes-textarea"
-            placeholder="Write your notes..."
-          ></textarea>
+          <div class="notes-display">
+            <p></p>
+          </div>
         </div>
 
         <div class="photo-gallery box">
@@ -66,11 +70,9 @@
 
       <div class="itinerary box">
         <h2>Itinerary</h2>
-        <textarea
-          id="itinerary"
-          class="itinerary-input"
-          placeholder="Type your itinerary..."
-        ></textarea>        
+          <div class="itinerary-display">
+            <p></p>
+          </div>
         <!-- NEW CODE START -->
         <!-- <div class="checklist">
           <h2>Checklist</h2>
