--- a/page3.html
+++ b/page3.html
@@ -52,20 +52,10 @@
 
         <div class="photo-gallery box">
           <h2>Photo Gallery</h2>
-          <input
-            type="url"
-            id="photo"
-            class="photo-input"
-          />
-          <button class="submit-button" aria-label="Add photo"><i class="fa-solid fa-chevron-right"></i></button>
           <div class="photos-box" id="addPhotosBtn" class="add-photos-btn">
             <div class="photos" id="photoDisplay">
             </div>
           </div>
-<!-- 
-        <button id="addPhotosBtn" class="add-photos-btn">
-          + Add More Photos
-        </button> -->
       </div>
 
       <div class="itinerary box">
@@ -83,7 +73,7 @@
     <div class="map-integration">
       <h2>Map</h2>
       <div id="mapView" class="placeholder-box">
-        Map will appear here if we get it to work..
+        Enable location services to search location.
       </div>
     </div>
   </body>
