minor CSS edits + made window popup in main3 dynamic

--- a/page2.html
+++ b/page2.html
@@ -115,7 +115,9 @@
             class="data-input"
             placeholder="Add an item (ex: Charger, Passport, Wallet)"
           />
-          <button id="addCheckItemBtn">+ Add Item</button>
+          <button id="addCheckItemBtn" class="add-item">
+            <i class="fa-solid fa-plus"></i>
+          </button>
           <div id="checklistItems"></div>
         </div>
       </div>
